Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109417

binding to alias crashes qml

    XMLWordPrintable

Details

    • e9b7eaaf6 (dev), 2423f09b6 (6.5), 75ec5421c (tqtc/lts-6.2)

    Description

      Attached a reproducible example:

      Binding in MyThing.qml to MyRectange.qml alias property on an anchor margin causes qml to crash in Qt Design Studio 2D view and Runtime.

       

       

      Attachments

        1. MyRectangle.qml
          0.3 kB
        2. MyThing.qml
          0.2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            brook_cronin_qt Brook Cronin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes