QML: Consider deep aliases when finding binding targets

If we have a deep alias we need to bind to the inner object rather than
the outer one.

Fixes: QTBUG-109417
Change-Id: Iefe8641026cfbbf9199b2bb8d9fa2f5fba591f17
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e9b7eaaf6e627c84cf77dc0ea76c9cb40d705711)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>